--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     },
     "dependencies": {
         "express": "^4.17.1",
+        "mongoose": "^5.8.5",
         "react": "^16.5.0",
         "react-dom": "^16.5.0"
     },
