--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "dependencies": {
         "express": "^4.17.1",
         "mongoose": "^5.8.5",
+        "nodemailer": "^6.4.2",
         "react": "^16.5.0",
         "react-dom": "^16.5.0"
     },
