--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
         "start": "index.js"
     },
     "dependencies": {
+        "connect-mongo": "^3.2.0",
+        "crypto": "^1.0.1",
         "express": "^4.17.1",
+        "express-session": "^1.17.0",
         "mongoose": "^5.8.5",
         "nodemailer": "^6.4.2",
         "react": "^16.5.0",
