--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "scripts": {
         "dev": "webpack-dev-server --hot --open",
         "build": "webpack",
-        "start": "index.js"
+        "start": "node index.js"
     },
     "dependencies": {
         "connect-mongo": "^3.2.0",
